[gd_scene load_steps=15 format=3 uid="uid://1vyfpf0y21g0"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_wpwve"]
[ext_resource type="Texture2D" uid="uid://rtkej0llprac" path="res://Sprites/ClaireSPSH2.png" id="2_d8qec"]

[sub_resource type="Animation" id="Animation_6cosj"]
resource_name = "Idle_Down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_jejwd"]
resource_name = "Idle_Left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_2x4r7"]
resource_name = "Idle_Right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ph4me"]
resource_name = "Idle_Up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_dvqb4"]
resource_name = "Walk_Down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [13, 15]
}

[sub_resource type="Animation" id="Animation_actj8"]
resource_name = "Walk_Left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 4]
}

[sub_resource type="Animation" id="Animation_eeu0p"]
resource_name = "Walk_Right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_p7o00"]
resource_name = "Walk_Up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8spxo"]
_data = {
"Idle_Down": SubResource("Animation_6cosj"),
"Idle_Left": SubResource("Animation_jejwd"),
"Idle_Right": SubResource("Animation_2x4r7"),
"Idle_Up": SubResource("Animation_ph4me"),
"Walk_Down": SubResource("Animation_dvqb4"),
"Walk_Left": SubResource("Animation_actj8"),
"Walk_Right": SubResource("Animation_eeu0p"),
"Walk_Up": SubResource("Animation_p7o00")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_aawyn"]
radius = 69.029

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dyvhl"]
radius = 14.0
height = 72.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j674u"]
size = Vector2(28.25, 19)

[node name="Player_Node" type="CharacterBody2D"]
script = ExtResource("1_wpwve")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(2.08165e-12, -80)
zoom = Vector2(8, 8)

[node name="Player_Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -28)
texture = ExtResource("2_d8qec")
hframes = 4
vframes = 4
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player_Sprite"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8spxo")
}

[node name="Detection_Collision" type="Area2D" parent="."]

[node name="Detection_Hitbox" type="CollisionShape2D" parent="Detection_Collision"]
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_aawyn")

[node name="Body_Collision" type="Area2D" parent="."]

[node name="Body_Hitbox" type="CollisionShape2D" parent="Body_Collision"]
position = Vector2(0, -27)
shape = SubResource("CapsuleShape2D_dyvhl")

[node name="Feet_Hitbox" type="CollisionShape2D" parent="."]
visibility_layer = 2
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_j674u")

[connection signal="area_entered" from="Detection_Collision" to="." method="_on_detection_collision_area_entered"]
[connection signal="area_entered" from="Body_Collision" to="." method="_on_body_collision_area_entered"]
